fix - hover styles on mobile

--- a/src/app/dashboard/expert/manage-profile/manage-profile.sass
+++ b/src/app/dashboard/expert/manage-profile/manage-profile.sass
@@ -5,14 +5,17 @@
   [class*="section"]
     margin: 0 0 48px
 
-  .entry-title
-    .btn
-      margin: 0 0 0 24px
-
   .organization-row,
   .expert-row
     .btn-handler
-      visibility: hidden
+      +lgm
+        visibility: hidden
+
+    .btn
+      margin: 0
+
+      +smm
+        margin: 0 12px
 
     &:hover
       .btn-handler
